added several new sections to the proposal

--- a/notebooks/elasticsearch.ipynb
+++ b/notebooks/elasticsearch.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-16T15:30:45.099095Z",
-     "start_time": "2023-11-16T15:30:41.228315Z"
+     "end_time": "2023-11-28T09:59:21.483026Z",
+     "start_time": "2023-11-28T09:59:21.475188Z"
     }
    },
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "urllib3.disable_warnings()\n",
@@ -40,8 +40,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-16T15:30:45.103563Z",
-     "start_time": "2023-11-16T15:30:45.100156Z"
+     "end_time": "2023-11-28T09:59:21.746527Z",
+     "start_time": "2023-11-28T09:59:21.742328Z"
     }
    },
    "id": "8bee4ed33bfd4de2"
@@ -63,13 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "{'name': '1bb166804bb3',\n 'cluster_name': 'docker-cluster',\n 'cluster_uuid': 'm81m9H08RKigCdwIje8C6w',\n 'version': {'number': '8.11.0',\n  'build_flavor': 'default',\n  'build_type': 'docker',\n  'build_hash': 'd9ec3fa628c7b0ba3d25692e277ba26814820b20',\n  'build_date': '2023-11-04T10:04:57.184859352Z',\n  'build_snapshot': False,\n  'lucene_version': '9.8.0',\n  'minimum_wire_compatibility_version': '7.17.0',\n  'minimum_index_compatibility_version': '7.0.0'},\n 'tagline': 'You Know, for Search'}"
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,8 +80,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-16T15:30:45.156128Z",
-     "start_time": "2023-11-16T15:30:45.106656Z"
+     "end_time": "2023-11-28T09:59:22.654372Z",
+     "start_time": "2023-11-28T09:59:22.505731Z"
     }
    },
    "id": "7bd73deffbc91e05"
@@ -208,10 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "outputs": [],
    "source": [
-    "query = 'american sports news'\n",
+    "query = 'driving license registration service'\n",
     "\n",
     "knn_query = {\n",
     "    'knn': {\n",
@@ -227,27 +227,27 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-16T15:31:02.380734Z",
-     "start_time": "2023-11-16T15:31:02.144728Z"
+     "end_time": "2023-11-28T10:00:04.530133Z",
+     "start_time": "2023-11-28T10:00:04.489935Z"
     }
    },
    "id": "daa00fc4dd046b6e"
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "These are the top 5 results of the query \"american sports news\":\n",
+      "These are the top 5 results of the query \"driving license registration service\":\n",
       "\n",
-      "\t1. NFL v3 Play-by-Play     v.1.0   [67%]\n",
-      "\t2. News Plugin             v.1     [66%]\n",
-      "\t3. Soccer v3 Projections   v.1.0   [64%]\n",
-      "\t4. MLB v3 Projections      v.1.0   [64%]\n",
-      "\t5. NFL v3 Scores           v.1.0   [64%]\n"
+      "\t1. Vehicle Enquiry API                v.1.1.0   [81%]\n",
+      "\t2. Car Registration API               v.1.0.0   [81%]\n",
+      "\t3. Motor Vehicle Department, Odisha   v.3.0.0   [78%]\n",
+      "\t4. Transport Department, Tamil Nadu   v.3.0.0   [78%]\n",
+      "\t5. Transport Department, Haryana      v.3.0.0   [78%]\n"
      ]
     }
    ],
@@ -263,8 +263,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-16T15:36:10.609326Z",
-     "start_time": "2023-11-16T15:36:10.605517Z"
+     "end_time": "2023-11-28T10:00:04.732922Z",
+     "start_time": "2023-11-28T10:00:04.729541Z"
     }
    },
    "id": "7714a586e10ecff7"
