--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -99,8 +99,8 @@
     \subsection{Evaluation}\label{subsec:evaluation}
     \input{sections/state-of-the-art/evaluation}
 
-    % TODO - Add a section on t-SNE plots
-    % TODO - Add a section for DL models (?)
+    \subsection{{t}-SNE Plots}\label{subsec:t-sne-plots}
+    \input{sections/state-of-the-art/tsne-plot}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -112,10 +112,12 @@
     \input{sections/feasibility-study/approach}
 
     \subsection{Ground Truth}\label{subsec:ground-truth}
+    \input{sections/feasibility-study/ground-truth}
 
     \subsection{Results}\label{subsec:results}
     \input{sections/feasibility-study/results}
 
+    % TODO - Comparison with APIs.guru
     \subsection{Comparison with APIs.guru}\label{subsec:comparison-with-apis.guru}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
